# folder-profiler

./: .folder_profiler_ignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SPRINT_1_SUMMARY.md  analysis-report.html  pyproject.toml  test-report.html  test-report.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pre-commit-update.yml
.speckit/: constitution.md  plan.md  specification.md
src/folder_profiler/: __init__.py  __main__.py  py.typed
src/folder_profiler/analyzer/: __init__.py  analyzer.py  duplicates.py  patterns.py  recommendations.py  statistics.py
src/folder_profiler/cli/: __init__.py  main.py
src/folder_profiler/reporter/: __init__.py  console_reporter.py  html_reporter.py  json_reporter.py  reporter.py
src/folder_profiler/scanner/: __init__.py  ignore_patterns.py  models.py  scanner.py
src/folder_profiler/utils/: __init__.py  formatting.py
tests/: conftest.py
tests/test_analyzer/: __init__.py  test_analyzer_simple.py  test_recommendations.py
tests/test_cli/: __init__.py  test_cli_integration.py
tests/test_reporter/: __init__.py  test_reporters.py
tests/test_scanner/: __init__.py  test_ignore_patterns.py  test_models.py  test_scanner.py  test_scanner_integration.py
tests/test_utils/: test_formatting.py
